tests/ui/type-pointer-eof.stderr
error: no rules expected the token `const`
 --> $DIR/type-pointer-eof.rs:5:17
  |
5 |     input = [{ *const }]
  |                 ^^^^^ no rules expected this token in macro call
